IssueNo: state_registry部件tdd整改
Description: state_registry部件tdd整改
Sig: SIG_Telephony
Feature or Bugfix: Bugfix
Binary Source: No

Signed-off-by: liuxiyao223 <liuxiyao223@huawei.com>

--- a/test/unittest/state_test/BUILD.gn
+++ b/test/unittest/state_test/BUILD.gn
@@ -27,6 +27,7 @@ ohos_unittest("tel_state_registry_test") {
     "$SOURCE_DIR/frameworks/native/observer/include",
     "$SOURCE_DIR/frameworks/native/common/include",
     "$SOURCE_DIR/services/include",
+    "$SOURCE_DIR/services/telephony_ext_wrapper/include",
   ]
 
   deps = [
