--- a/BUILD.gn
+++ b/BUILD.gn
@@ -51,6 +51,7 @@ ohos_shared_library("tel_state_registry") {
     "ipc:ipc_core",
     "safwk:system_ability_fwk",
     "samgr:samgr_proxy",
+    "access_token:libaccesstoken_sdk",
   ]
 
   defines = [
