--- a/BUILD.gn
+++ b/BUILD.gn
@@ -54,6 +54,11 @@ ohos_shared_library("tel_state_registry") {
     "samgr:samgr_proxy",
   ]
 
+  cflags_cc = [
+    "-O2",
+    "-D_FORTIFY_SOURCE=2",
+  ]
+
   defines = [
     "TELEPHONY_LOG_TAG = \"StateRegistry\"",
     "LOG_DOMAIN = 0xD001F07",
