--- a/frameworks/cj/BUILD.gn
+++ b/frameworks/cj/BUILD.gn
@@ -22,23 +22,17 @@ ohos_shared_library("cj_observer_ffi") {
   }
 
   branch_protector_ret = "pac_ret"
-  include_dirs = 
-    [ "$SUBSYSTEM_DIR/state_registry/frameworks/native/observer/include" ]
+  include_dirs =
+      [ "$SUBSYSTEM_DIR/state_registry/frameworks/native/observer/include" ]
 
   sources = [
-<<<<<<< HEAD
-    "src/tel_cellular_data_ffi.cpp",
-    "src/tel_cellular_data_impl.cpp",
-=======
     "src/observer_event_handler.cpp",
     "src/telephony_observer_ffi.cpp",
     "src/telephony_observer_impl.cpp",
     "src/telephony_observer_utils.cpp",
->>>>>>> c09ae0ef2a2fb8e7e43e578a346d42209faa6119
   ]
 
-  deps =
-    [ "$SUBSYSTEM_DIR/state_registry/frameworks/native/observer:tel_state_registry_api" ]
+  deps = [ "$SUBSYSTEM_DIR/state_registry/frameworks/native/observer:tel_state_registry_api" ]
 
   external_deps = [
     "c_utils:utils",
@@ -51,10 +45,7 @@ ohos_shared_library("cj_observer_ffi") {
     "libuv:uv",
     "napi:ace_napi",
     "napi:cj_bind_ffi",
-<<<<<<< HEAD
-=======
     "napi:cj_bind_native",
->>>>>>> c09ae0ef2a2fb8e7e43e578a346d42209faa6119
   ]
 
   innerapi_tags = [ "platformsdk" ]
