--- a/test/fuzztest/telephonyobserver_fuzzer/BUILD.gn
+++ b/test/fuzztest/telephonyobserver_fuzzer/BUILD.gn
@@ -28,6 +28,7 @@ ohos_fuzztest("TelephonyObserverFuzzTest") {
     "$SUBSYSTEM_DIR/state_registry/interfaces/innerkits/observer",
     "$SUBSYSTEM_DIR/state_registry/services/include",
     "$SUBSYSTEM_DIR/state_registry/test/fuzztest/common_fuzzer",
+    "$SUBSYSTEM_DIR/state_registry/frameworks/native/observer/include",
   ]
 
   deps = [
