适配部件依赖
Change-Id: I7c627bbed681fa8961b648d9b717e026082dcaf8
Signed-off-by: LYQ_YES <liuyuqiang9@huawei.com>

--- a/frameworks/js/napi/BUILD.gn
+++ b/frameworks/js/napi/BUILD.gn
@@ -32,10 +32,7 @@ ohos_shared_library("observer") {
     "src/napi_telephony_observer.cpp",
   ]
 
-  deps = [
-    "$SUBSYSTEM_DIR/state_registry/frameworks/native/observer:tel_state_registry_api",
-    "//third_party/libuv:uv",
-  ]
+  deps = [ "$SUBSYSTEM_DIR/state_registry/frameworks/native/observer:tel_state_registry_api" ]
 
   external_deps = [
     "c_utils:utils",
@@ -45,6 +42,7 @@ ohos_shared_library("observer") {
     "hilog:libhilog",
     "init:libbegetutil",
     "ipc:ipc_core",
+    "libuv:uv",
     "napi:ace_napi",
   ]
 
