--- a/frameworks/js/napi/BUILD.gn
+++ b/frameworks/js/napi/BUILD.gn
@@ -20,7 +20,6 @@ ohos_shared_library("observer") {
   }
   branch_protector_ret = "pac_ret"
   include_dirs = [
-    "//third_party/node/src",
     "include",
     "$SUBSYSTEM_DIR/state_registry/frameworks/native/observer/include",
   ]
@@ -44,6 +43,7 @@ ohos_shared_library("observer") {
     "ipc:ipc_core",
     "libuv:uv",
     "napi:ace_napi",
+    "node:node_header_notice",
   ]
 
   defines = [
