--- a/test/fuzztest/telephonyobserver_fuzzer/BUILD.gn
+++ b/test/fuzztest/telephonyobserver_fuzzer/BUILD.gn
@@ -39,7 +39,7 @@ ohos_fuzztest("TelephonyObserverFuzzTest") {
   external_deps = [
     "ability_base:want",
     "access_token:libaccesstoken_sdk",
-    "access_token:libnativetoken",
+    "access_token:libnativetoken_shared",
     "access_token:libtoken_setproc",
     "c_utils:utils",
     "call_manager:tel_call_manager_api",
