--- a/test/fuzztest/telephonystateregistry_fuzzer/BUILD.gn
+++ b/test/fuzztest/telephonystateregistry_fuzzer/BUILD.gn
@@ -38,7 +38,7 @@ ohos_fuzztest("TelephonyStateRegistryFuzzTest") {
   external_deps = [
     "ability_base:want",
     "access_token:libaccesstoken_sdk",
-    "access_token:libnativetoken",
+    "access_token:libnativetoken_shared",
     "access_token:libtoken_setproc",
     "c_utils:utils",
     "call_manager:tel_call_manager_api",
