--- a/frameworks/ets/ani/observer/BUILD.gn
+++ b/frameworks/ets/ani/observer/BUILD.gn
@@ -28,6 +28,8 @@ ohos_static_library("observer_ani_cxx") {
     debug = false
   }
 
+  branch_protector_ret = "pac_ret"
+
   include_dirs = [
     "include",
     "${target_gen_dir}/src",
