修复重复move同一块内存和重复释放锁
Change-Id: If333fe17175c5572c1fbcf51548b1ad4fb031c00
Signed-off-by: LYQ_YES <liuyuqiang9@huawei.com>

--- a/frameworks/cj/BUILD.gn
+++ b/frameworks/cj/BUILD.gn
@@ -48,6 +48,11 @@ ohos_shared_library("cj_observer_ffi") {
     "napi:cj_bind_native",
   ]
 
+  defines = [
+    "TELEPHONY_LOG_TAG = \"StateRegistryCjApi\"",
+    "LOG_DOMAIN = 0xD001F07",
+  ]
+
   innerapi_tags = [ "platformsdk" ]
   part_name = "state_registry"
   subsystem_name = "telephony"
