--- a/test/unittest/state_test/BUILD.gn
+++ b/test/unittest/state_test/BUILD.gn
@@ -63,8 +63,10 @@ ohos_unittest("tel_state_registry_branch_test") {
   test_module = "tel_state_registry_test"
   module_out_path = part_name + "/" + test_module
 
-  sources =
-      [ "$SOURCE_DIR/test/unittest/state_test/state_registry_branch_test.cpp" ]
+  sources = [
+    "$SOURCE_DIR/test/mock/mock_telephony_permission.cpp",
+    "$SOURCE_DIR/test/unittest/state_test/state_registry_branch_test.cpp",
+  ]
 
   include_dirs = [
     "$SOURCE_DIR/interfaces/innerkits/notify",
@@ -72,6 +74,7 @@ ohos_unittest("tel_state_registry_branch_test") {
     "$SOURCE_DIR/frameworks/native/common/include",
     "$SOURCE_DIR/services/include",
     "$SOURCE_DIR/services/telephony_ext_wrapper/include",
+    "$SOURCE_DIR/test/mock",
   ]
 
   deps = [
@@ -88,6 +91,7 @@ ohos_unittest("tel_state_registry_branch_test") {
     "common_event_service:cesfwk_innerkits",
     "core_service:libtel_common",
     "core_service:tel_core_service_api",
+    "googletest:gmock",
     "hilog:libhilog",
     "init:libbegetutil",
     "ipc:ipc_core",
